styles/note.css
#noteArea
{
	width: min(41vh, 90vw);
	height: 20vh;

	position: absolute;
	left: 50vw;
	top: 3vh;
	transform: translate(-50%, 0);
}

#note
{
	max-height: 20vh;
	width: min-content;
	display: block;
	margin: 0 auto 0 auto;
	padding: 2vh;
	white-space: nowrap;


	background-color: rgba(10, 22, 48, 0.75);
	backdrop-filter: blur(10px);
}

.noteText
{
	color: white;
	font-family: "Times New Roman", serif;
	font-style: italic;
	font-size: 3vh;
	line-height: 4vh; 
}

.animatedWord
{
	display: inline-block;
	opacity: 0;
	animation: animFadeIn 0.5s ease-out forwards;
}

.animatedLine
{
	margin: 0;
	opacity: 0;
	animation: animFadeIn 2s ease-out forwards;
}

.animNoteIn, .animNoteOut
{
	animation-iteration-count: 1;
	animation-timing-function: ease;
	animation-fill-mode: forwards;
}
.animNoteIn
{
	opacity: 0;
	animation-name: animFadeIn;
	animation-duration: 1s;
	/* animation-delay: 1.75s;  */
}
.animNoteOut
{
	opacity: 1;
	animation-name: animFadeOut; /* Simply reverting "in" animation does't work */
	animation-duration: 0.2s;
}

